--- a/trabalho/estilos/estilo.css
+++ b/trabalho/estilos/estilo.css
@@ -75,7 +75,7 @@ body{
   
   input[type=submit] {
     width: 30%;
-    background-color: #4CAF50;
+    background-color: #6495ED;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -101,19 +101,22 @@ body{
     color: white;
     padding: 5px 0px;
     width: 200px;
-    background-color: #4CAF50;
+    background-color: #6495ED;
     border-radius: 4px;
   }
   .h2-subtitle{
-    color: #4CAF50;
+    color: #6495ED;
     padding: 10px 0;
     font-family: Arial, Helvetica, sans-serif;
   }
   h3{
-      color: #4CAF50;
+      color: #6495ED;
       font-family: Arial, Helvetica, sans-serif;
   }
   td{
-      color: #4CAF50;
+      color: #6495ED;
       font-family: Arial, Helvetica, sans-serif;
+  }
+  .asterisco{
+    color: red;
   }
